FIX - Change menu order and align headers on camps page, change footer on destinations page

--- a/inc/scss/_theme.scss
+++ b/inc/scss/_theme.scss
@@ -1321,7 +1321,7 @@
 				}
 				
 				td, th {
-					padding: 0.5em 0;
+					padding: 0 0 1em 0;
 					padding-right: 1em;
 				}
 			}
